# py-apple-foundation

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: foundation_models.md
scripts/: build_swift.sh
src/apple_foundation/: __init__.py  foundation.py  py.typed  transcription.py
src/apple_foundation/swift/: Info.plist  entitlements.plist  generate.swift  transcribe.swift
tests/: __init__.py  test_foundation_service.py  test_integration.py  test_tools.py  test_transcription.py
